--- a/css/stallion-style-custom.css
+++ b/css/stallion-style-custom.css
@@ -863,7 +863,7 @@ blockquote, q, pre{ background-color: #f5f5f5; }
 .gdlr-core-call-to-action-item-caption{ color: #535353; } 
 .gdlr-core-counter-item-top-text{ color: #828282; } 
 .gdlr-core-counter-item-top-icon{ color: #393939; } 
-.gdlr-core-counter-item-number{ color: #393939; } 
+.gdlr-core-counter-item-number{ color: #393939 !important; } 
 .gdlr-core-counter-item-divider{ border-color: #393939; } 
 .gdlr-core-counter-item-bottom-text{ color: #393939; } 
 .gdlr-core-column-service-item .gdlr-core-column-service-icon{ color: #9d9d9d; } 
